# orafce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: create_new_release.yml
cmake/: FindPostgreSQL.cmake
include/: builtins.h
src/: CMakeLists.txt
src/datatypes/: CMakeLists.txt
src/functions/: CMakeLists.txt
src/init/: CMakeLists.txt  orafce.c
tests/datatypes/: nvarchar2.sql  varchar2.sql
tests/functions/: aggregate.sql  conditional.sql  datetime.sql  decode.sql  dump.sql  format.sql  format_to_date.sql  greatest_least.sql  math.sql  string.sql  string_nlssort.sql  string_pad.sql  string_regexp.sql  string_trim.sql  trigger.sql
tests/objects/: dual.sql
updates/: CMakeLists.txt  orafce--1.0.sql
